--- a/style.css
+++ b/style.css
@@ -1,353 +1,307 @@
 /* Global */
+
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 * {
-  box-sizing: border-box;
-}
-
-:root {
-  --first-color: #2790ba;
-  --second-color: #ede8ca;
-  --third-color: #fbfaf1;
-  --fourth-color: #fecd48;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: "Maven Pro", sans-serif;
-  margin: 0;
+    font-family: "Maven Pro", sans-serif;
+    margin: 0;
 }
+
 
 /* Class Libraries */
 
 .text-center {
-  text-align: center;
+    text-align: center;
 }
 
 .text-thin {
-  font-weight: 100;
+    font-weight: 100;
 }
 
 .text-extra-light {
-  font-weight: 200;
+    font-weight: 200;
 }
 
 .text-light {
-  font-weight: 300;
+    font-weight: 300;
 }
 
 .text-regular {
-  font-weight: 400;
+    font-weight: 400;
 }
 
 .text-medium {
-  font-weight: 500;
+    font-weight: 500;
 }
 
 .text-semi-bold {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .text-bold {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 .text-extra-bold {
-  font-weight: 800;
+    font-weight: 800;
 }
 
 .text-black {
-  font-weight: 900;
+    font-weight: 900;
 }
 
 .display-1 {
-  font-size: 56px;
+    font-size: 56px;
 }
 
 .display-2 {
-  font-size: 46px;
+    font-size: 46px;
 }
 
 .display-3 {
-  font-size: 36px;
+    font-size: 36px;
 }
 
 .display-4 {
-  font-size: 26px;
+    font-size: 26px;
 }
 
 .mt-3 {
-  margin-top: 3px;
+    margin-top: 3px;
 }
 
 .mt-4 {
-  margin-top: 4px;
+    margin-top: 4px;
 }
 
 .mt-5 {
-  margin-top: 5px;
+    margin-top: 5px;
 }
 
 .mt-6 {
-  margin-top: 6px;
+    margin-top: 6px;
 }
 
 .center-vertical {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 .border-right {
-  border-right: 1px solid rgba(255, 255, 255, 0.3);
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+.text-content {
+    font-size: 1.3em;
+}
+
+
 /* Header */
 
 .nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
+
 ul {
-  background-color: #143d59;
-  list-style-type: none;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+    background-color: #143d59;
+    list-style-type: none;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
 }
+
 .nav li {
-  display: inline;
+    display: inline;
 }
+
 .nav a {
-  display: inline-block;
-  padding: 15px 15px;
-  text-decoration: none;
-  color: #fff;
-  margin: 10px 20px 10px 20px;
-  font-weight: 200;
-  font-size: 1.2rem;
+    display: inline-block;
+    padding: 15px 15px;
+    text-decoration: none;
+    color: #fff;
+    margin: 10px 20px 10px 20px;
+    font-weight: 200;
+    font-size: 1.2rem;
 }
 
 .nav a:hover {
-  background: #f4b41a;
-  color: #143d59;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12);
-  transition: 0.5s;
-  border-radius: 10%;
+    background: #f4b41a;
+    color: #143d59;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+    transition: 0.5s;
+    border-radius: 10%;
 }
 
 .profile-picture {
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072);
-  border-radius: 30px;
-}
-
-figure img {
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-}
-figure:hover img {
-  filter: brightness(75%);
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072);
+    border-radius: 30px;
+    height: 350px;
 }
 
 .profile-name {
-  margin-top: 0px;
-  color: #143d59;
-  font-weight: 900;
-  text-transform: uppercase;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: #143d59;
+    font-weight: 900;
+    text-transform: uppercase;
 }
 
-/* blockquote */
-blockquote {
-  font-size: 1.2em;
-  width: 60%;
-  margin: 50px auto;
-  font-family: Open Sans;
-  font-style: italic;
-  color: #fff;
-  padding: 1.2em 30px 1.2em 75px;
-  border-left: 10px solid #143d59;
-  line-height: 2;
-  position: relative;
-  background-color: #f4b41a;
-  margin-top: 15px;
-  font-style: normal;
-  color: #143d59;
-  border-radius: 20px;
+.profil-singkat {
+    font-size: 1.3em;
+    width: 60%;
+    margin: 50px auto;
+    color: #fff;
+    padding: 1.2em 30px 0px 75px;
+    border-left: 10px solid #143d59;
+    line-height: 2;
+    position: relative;
+    background-color: #f4b41a;
+    margin-top: 15px;
+    font-style: normal;
+    color: #143d59;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-blockquote::before {
-  content: "\201C";
-  color: #143d59;
-  font-size: 4em;
-  position: absolute;
-  left: 10px;
-  top: -10px;
+.profil-singkat::before {
+    content: "\201C";
+    color: #143d59;
+    font-size: 4em;
+    position: absolute;
+    left: 10px;
+    top: -10px;
 }
 
-blockquote::after {
-  content: "";
+.profil-singkat::after {
+    content: "";
 }
 
 .section-name {
-  color: #f4b41a;
+    color: #f4b41a;
 }
 
 .under-line {
-  width: 50px;
-  height: 6px;
-  background: #f4b41a;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 12px;
-  margin-top: -20px;
+    width: 50px;
+    height: 6px;
+    background: #f4b41a;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 12px;
+    margin-top: -20px;
 }
+
 
 /* Section Two */
+
 #biodata {
-  background: #143d59;
-  padding-top: 10px;
-  padding-bottom: 30px;
+    background: #143d59;
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
 
-.biodata-card {
-  height: 370px;
-  width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 15px;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086);
-  border-radius: 10px;
-  background-color: #f4b41a;
+
+/* Motto */
+
+.motohidup {
+    position: relative;
+    margin: 25px auto;
+    width: 50%;
+    font-size: 1.5em;
+    line-height: 56px;
+    padding-left: 40px;
+    border-right: 10px solid #143d59;
+    background: #f4b41a;
+    color: #143d59;
+    padding: 20px;
+    font-weight: 600;
+    border-radius: 20px;
 }
 
-/* Table Biodata */
-table {
-  width: 500px;
-  border-collapse: collapse;
-  overflow: hidden;
+blockquote span {
+    display: block;
+    text-align: right;
+    font-size: 24px;
+    line-height: 40px;
+    margin-top: 10px;
+    text-transform: uppercase;
 }
 
-th,
-td {
-  padding: 15px;
-  color: #143d59;
+blockquote.motohidup .tweet-quote {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 74px;
+    height: 26px;
+    margin-top: -13px;
+    margin-left: -36px;
+    transition: all 0.2s ease;
 }
 
-tbody tr:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-tbody td {
-  position: relative;
-}
-
-/* Card */
-.cards {
-  width: 900px;
-  padding: 0.5em;
-  margin: 0 auto;
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-article {
-  padding: 0.5em;
-  margin: 0 0.5em;
-  border-radius: 0.5em;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  row-gap: 1em;
-}
-
-.content {
-  background-color: #f4b41a;
-  padding: 0.5em;
-  border-radius: 0.5em;
-  color: #222;
-  line-height: 2;
-  font-weight: 500;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12);
-  color: #143d59;
-}
-
-header {
-  background-color: #143d59;
-  color: #f4b41a;
-  padding: 0.5em;
-  border-radius: 0.5em;
-}
-
-header h2 {
-  font-size: 35px;
-}
 
 /* Footer */
+
 .site-footer {
-  position: relative;
-  background: #143d59;
-  width: 100%;
-  bottom: 0;
+    position: relative;
+    background: #143d59;
+    width: 100%;
+    bottom: 0;
 }
 
 .site-footer .container {
-  max-width: 85%;
-  margin: 0 auto;
-  position: relative;
-  overflow: hidden;
-  padding-top: 20px;
+    max-width: 85%;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    padding-top: 20px;
 }
 
 .site-footer .container h1 {
-  font-size: 40px;
+    font-size: 40px;
 }
 
 .site-footer .container h2 {
-  font-size: 40px;
-  float: right;
+    font-size: 40px;
+    float: right;
 }
 
 .site-footer .grid-container a {
-  color: #f4b41a;
-  text-decoration: none;
-  font-size: 15px;
-  line-height: 16.25px;
+    color: #f4b41a;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 16.25px;
 }
 
 .site-footer .grid-item {
-  padding: 10px;
-  color: #f4b41a;
+    padding: 10px;
+    color: #f4b41a;
 }
 
 .site-footer .grid-container .inner-grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  text-align: left;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    text-align: left;
 }
 
 .site-footer .container hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #f4b41a;
-  margin: 1px;
-  padding: 0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #f4b41a;
+    margin: 1px;
+    padding: 0;
 }
 
 .site-footer .container p {
-  font-size: 14px;
-  text-align: right;
-  color: #f4b41a;
-  font-weight: 500;
+    font-size: 14px;
+    text-align: right;
+    color: #f4b41a;
+    font-weight: 500;
 }
